chore: fix sonar issues